--- a/css/style.css
+++ b/css/style.css
@@ -140,18 +140,21 @@ h2{
 	text-decoration: none;
 }
 
-/* Nivo Slider */
+/* Slider */
 #sliderbox, #socialbox{
 	margin: 0 7px; height: 360px; background: url(../images/moam_bg_hl.png) repeat-x center -175px; position: relative;
 }
 .slider-wrapper{
-	background: url(../images/slider-bg.png) no-repeat center center; padding: 20px 0 38px;
+	position:relative; width:688px; height:350px; margin:0 auto; 
 }
-.navBtns{
-	position: absolute; width: 790px; margin: 0 auto; left: 0; right: 0; top: 150px;
+#prevBtn {
+	background: url(../images/slider-navi.png) 0 0 no-repeat; width: 78px; height: 77px; margin: 140px 0 0 100px;	
 }
-.navBtns img{
-	border: 0;
+#nextBtn {
+	background: url(../images/slider-navi.png) 0 -77px no-repeat; width: 78px; height: 77px; margin: 140px 100px 0 0;
+}
+#testimonials-wrapper {
+	width: 900px; margin: 0 auto 10px auto; padding: 0;
 }
 ul.social{
 	list-style: none; position: absolute; top: 0; right: 23px;
@@ -167,6 +170,12 @@ ul.social li{
 }
 #socialbox2{
 	float: right; background: none; height: 52px; 
+}
+#fund-thermo{
+	width: 200px; margin-left: 10px;	
+}
+#fund-countdown{
+	width: 800px; margin-right: 10px;
 }
 
 /* Contacts Page */
