--- a/css/style.css
+++ b/css/style.css
@@ -98,11 +98,11 @@ input[type=submit].search-btn:hover{
 	background: url(../images/divider.jpg) repeat-x center center; height: 29px; margin-bottom: 20px;
 }
 a.play-vid{
-	text-indent: -999999px; background: url(../images/press_play_btn.png) no-repeat center center; height: 71px; width: 324px; overflow: hidden; display: table; margin: 0 auto;
+	text-indent: -999999px; background: url(../images/press_play_btn.png) no-repeat center center; height: 71px; width: 324px; overflow: hidden; display: table; margin: 0 auto; cursor: default;
 }
-a.play-vid:hover{
+/*a.play-vid:hover{
 	background: url(../images/press_play_btn_hover.png) no-repeat center center; 
-}
+}*/
 .subs-form{
 	width:358px; margin-right:8px; background: url(../images/press_play_input_bg.png) no-repeat center bottom; height: 576px;
 }
@@ -184,15 +184,15 @@ ul.social li{
 	text-decoration: none;	
 }
 .fundraising-button{
-	width: 450px; height: 76px; background:url(../images/green-ribbon-button.jpg) no-repeat; padding-top: 8px; color: #fff;}
+	width: 550px; height: 93px; background:url(../images/green-ribbon-button.png) no-repeat; padding-top: 8px; color: #fff;}
 .fundraising-button2{
-	width: 450px; height: 76px; background:url(../images/green-ribbon-button.jpg) no-repeat; padding-top: 13px; color: #fff; 
+	width: 550px; height: 93px; background:url(../images/green-ribbon-button.png) no-repeat; padding-top: 15px; color: #fff; 
 }
 .fundraising-button h3{
-	font-size: 20px;
+	font-size: 26px;
 }
 .fundraising-button2 h3{
-	font-size: 18px;
+	font-size: 22px;
 }
 .fundraising-button:hover, .fundraising-button2:hover{
 	color: #DDD;	
